--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "0.18.0",
     "react": "^16.2.0",
     "react-bootstrap": "0.31.5",
     "react-dom": "^16.2.0",
+    "react-redux": "5.0.7",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.0.17",
+    "redux": "4.0.0",
     "uuid": "3.1.0"
   },
   "scripts": {
